# xfce4-settings

./: Makefile.am  configure.ac.in
cursors/: Makefile.am  index.theme
dialogs/: Makefile.am
dialogs/datetime-settings/: Makefile.am  datetime-dialog.c  datetime-dialog.glade  datetime-dialog.h  datetime.gresource.xml  main.c  timezone-map.c  timezone-map.h  tz.c  tz.h  xfce-datetime.desktop.in.in
dialogs/mouse-settings/: main.c  mouse-dialog.glade
xfsettingsd/: main.c  pointers.c  xsettings.c  xsettings.xml
